--- a/assets/php/settings/templates/two-column-layout-template-user-preferences.html
+++ b/assets/php/settings/templates/two-column-layout-template-user-preferences.html
@@ -17,7 +17,12 @@
 
     <div class="customCSS">
         <label for="alpaca8" id="customcsslabel" style="text-align:left;">Custom CSS:</label>
-	    <div class="col-sm-9" id="customCSSEditor"></div>
+        <div class="col-sm-9" id="customCSSEditor"></div>
+    </div>
+
+    <div class="customJS">
+        <label for="alpaca9" id="customjslabel" style="text-align:left;">Custom JS:</label>
+        <div class="col-sm-9" id="customJSEditor"></div>
     </div>
     
 </div>
