Lot's of small fixes - settings log-on page: Why register button AND register link? / Also, why do we need register at all? I think we should just have it accessible from the settings page ONLY once authed? - Logarr Settings: `Vert height to "fit" - Settings submit buttons: Change to align left/color (Like monitorr) - All: Remove check for update from all pages. Should only exist on main info page - All: Change link order in footer to: - Settings page log-on container: Not a fan of the log-on container:

--- a/assets/data/custom.css
+++ b/assets/data/custom.css
@@ -5,3 +5,8 @@
  */
 
 /* add custom CSS below this line */
+
+/* center settings title and footer to page */
+.settings-title, .settings-footer {
+    margin: auto;
+}
