--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -14,6 +14,25 @@ body {
     padding: 10px 10px 0;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: #252525;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #252525;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #8E8B8B;
+}
+
 :root {
     font-size: 14px;
 }
@@ -1093,6 +1112,13 @@ a {
     width: 100%;
 }
 
+#settings-frame-wrapper {
+    margin: 2vw;
+    overflow-y: auto;
+    overflow-x: hidden;
+    color: white;
+}
+
 /*     Sidebar nav styles        */
 
 ul.nav.sidebar-nav > li > a > i {
@@ -1119,10 +1145,6 @@ ul.nav.sidebar-nav > li > a > i {
     transition: width 0.2s ease-in;
     width: 3px;
     z-index: -1;
-}
-
-.sidebar-nav li:first-child a {
-    background-color: #3e011e;
 }
 
 .sidebar-nav li:first-child a:hover, .sidebar-nav li.sidebar-nav-item.active a {
@@ -1391,7 +1413,6 @@ input[name="imginput"]:focus {
     width: calc(100% - 20rem);
     margin-top: 5rem;
     margin-bottom: 3rem;
-    background-color: #1F1F1F;
     height: 100%;
 }
 
